[gd_scene load_steps=9 format=3 uid="uid://ke8ne88ddqf1"]

[ext_resource type="Script" uid="uid://dtkmogktxrytf" path="res://scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dlv5tllol780b" path="res://assets/sprites/CharacterModels.png" id="1_v0iea"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(76, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(95, 0, 19, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgqql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkybt"]
size = Vector2(7, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(6, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(9, 15)

[node name="Player" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 3
script = ExtResource("1_cvnsp")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_vgqql")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_fkybt")

[node name="Internal Player Collider" type="ShapeCast2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_g2els")
target_position = Vector2(0, 0)
max_results = 2
collision_mask = 5

[node name="Water Collider" type="ShapeCast2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_g2els")
target_position = Vector2(0, 0)
max_results = 2
collision_mask = 8

[node name="WallCollider" type="ShapeCast2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_qhqgy")
target_position = Vector2(0, 0)
max_results = 2

[node name="LaunchCollider" type="ShapeCast2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_qhqgy")
target_position = Vector2(0, 0)
max_results = 2
collision_mask = 16

[node name="JumpBuffer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.08
one_shot = true

[node name="DashTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.08
one_shot = true

[node name="RespawnInputPause" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true
